Undelete message does not work in unified folders (cross-folder views)
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird_esr128 wontfix, thunderbird130 affected)
People
(Reporter: sagu-mozilla, Assigned: welpy-cw)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:129.0) Gecko/20100101 Firefox/129.0
Steps to reproduce:
- Create a new "Search Folder" (by some search filters) on IMAP box
- Select newly created "Search Folder" and select a message from the list
- Delete selected message (by pressing Del or from context menu) - message is marked as deleted
- Try to undelete it (by pressing Del or from context menu) - message stays deleted
Message can be undeleted by selecting it in real IMAP folder and pressing Del (or from Context menu)
Actual results:
Message stays deleted.
Expected results:
Message should be not deleted.
| Reporter | ||
Updated•1 year ago
|
Comment 1•1 year ago
|
||
That works for me.
| Reporter | ||
Comment 2•1 year ago
|
||
I have two linux machines with TB 128b1 and very similar setup of mailboxes and "search" folders.
And undelete only work on one "search" folder, on one of the machines.
On another machine, on "search" folder with the same settings, undelete does not work and it does not work on any other "seach" folder of both machines.
Updated•1 year ago
|
Comment 3•1 year ago
|
||
Hello Wayne,
We have tried but weren’t able to reproduce this issue, we tested with TB 128.0b1(20240611161651) on Ubuntu 22 and Ubuntu 24 using the same steps as above.
| Reporter | ||
Comment 4•1 year ago
|
||
I tried to crate a couple new search folders, and for them undelete is working.
It seems that undelete is not working for old search folders only.
| Reporter | ||
Comment 5•1 year ago
|
||
I did some more testing.
The undelete is not working when more than one IMAP folder is used for "Search" folder.
This affects new and old "search" folders.
| Assignee | ||
Comment 6•1 year ago
|
||
Reproduced with ESR 115 and Daily.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 7•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 8•1 year ago
|
||
This WFM with 115.13.0 with unified inbox.
Does a Unified folder behave differently?
Updated•1 year ago
|
| Assignee | ||
Comment 9•1 year ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #8)
This WFM with 115.13.0 with unified inbox.
Does a Unified folder behave differently?
I just tested this with that version. If "Just mark it as deleted" is chosen in one of the IMAP accounts, deleting a message from that account in the unified inbox marks it as deleted, while undeleting it (pressing [Del] again) doesn't work, the message remains struck through. Simultaneously deleting messages from multiple accounts with different IMAP deletion models can have even worse effects, which the patch also addresses.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Comment 10•1 year ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/27e24e99bc18
Fix message deletion in cross-folder search views. r=mkmelin
| Assignee | ||
Updated•1 year ago
|
Description
•