Bug 1902597 - Fix message deletion in cross-folder search views. r=mkmelin

- Refactor and fix `nsMsgSearchDBView::DeleteMessages()` to apply the correct deletion method for messages from different accounts.
- Enable undeleting of messages marked as deleted.
- Mark messages as read before deleting them (see bug 1859677)
- Update `m_totalMessagesInView` correctly when messages are moved or marked as deleted.

Differential Revision: https://phabricator.services.mozilla.com/D215380

--HG--
extra : amend_source : 30d4ad367f74641b67f2e61c2eb86c3bb668274b